--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,14 @@
-# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-python 3.7
-conda install -c rdkit rdkit=2020.09.1.0
-conda install -c conda-forge openbabel=3.1.1
-conda install -c anaconda scikit-learn==1.0.2
-conda install -c conda-forge keras=2.2.5
-conda install -c anaconda pip=21.2.2
-conda install -c anaconda h5py=3.7.0
+schnetpack==0.3
 
-#for molecular representations
-conda install -c conda-forge dscribe=1.2.2
-conda install -c conda-forge soaplite=1.0.3
+#dscribe==1.2.2
+#soaplite==1.0.3
 
-#for schnet
-pip install schnetpack==1.0.0
-#NOTE FOR LOADING MODEL 1, YOU NEED SCHNETPACK 0.3!!! 
-#pip install schnetpack==0.3
+#rdkit-pypi==2020.09.1.0
+#openbabel==3.1.1
+scikit-learn==1.0.2
+keras==2.2.5
 
-
-#basics
-pip install numpy==1.21.5 
-pip install pandas==1.1.5 
-pip install ipython
-pip install ipykernel
-
-#how to add kernel to jupyter notebook
-ipython kernel install --user --name=env_name
+numpy==1.21.5 
+pandas==1.1.5 
+ipython
+ipykernel
